--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -741,7 +741,12 @@
    ],
    "source": [
     "# Resample the training data with the RandomOversampler\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "# Instantiate the model\n",
+    "ros = RandomOverSampler(random_state=1)\n",
+    "# Resample the targets\n",
+    "X_resampled, y_resampled = ros.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -762,7 +767,11 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logreg = LogisticRegression(solver='lbfgs', random_state=1)\n",
+    "\n",
+    "# Fit\n",
+    "logreg.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -783,7 +792,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -805,7 +815,14 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "from sklearn.metrics import confusion_matrix\n",
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
    ]
   },
   {
@@ -829,7 +846,8 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
