--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -875,7 +875,12 @@
    ],
    "source": [
     "# Resample the training data with SMOTE\n",
-    "# YOUR CODE HERE"
+    "from imblearn.over_sampling import SMOTE\n",
+    "# Instantiate the model\n",
+    "smote = SMOTE(random_state=1)\n",
+    "# Resample the targets\n",
+    "X_resampled, y_resampled = smote.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -896,7 +901,7 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "logreg.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -917,7 +922,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = logreg.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -939,7 +945,12 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
    ]
   },
   {
@@ -963,7 +974,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1002,7 +1013,11 @@
    "source": [
     "# Resample the data using the ClusterCentroids resampler\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.under_sampling import ClusterCentroids\n",
+    "# Instantiate\n",
+    "cc = ClusterCentroids(random_state=1)\n",
+    "X_resampled, y_resampled = cc.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -1023,7 +1038,7 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "logreg.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -1044,7 +1059,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = logreg.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1066,7 +1082,13 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
    ]
   },
   {
@@ -1090,7 +1112,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
@@ -1129,7 +1151,10 @@
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "smoteenn = SMOTEENN(random_state=1)\n",
+    "X_resampled, y_resampled = smoteenn.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
@@ -1150,7 +1175,7 @@
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "logreg.fit(X_resampled, y_resampled)"
    ]
   },
   {
@@ -1171,7 +1196,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = logreg.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1193,7 +1219,12 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
    ]
   },
   {
@@ -1217,7 +1248,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))"
    ]
   },
   {
