--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -342,10 +342,14 @@
    "outputs": [],
    "source": [
     "# Create our features\n",
-    "X = # YOUR CODE HERE\n",
+    "# Convert string columns to numbers and drop 'loan_status' column then assign to X\n",
+    "X = pd.get_dummies(df, columns=['home_ownership', 'verification_status', 'issue_d', 'pymnt_plan', \n",
+    "                'initial_list_status', 'next_pymnt_d', 'application_type', 'hardship_flag', \n",
+    "                'debt_settlement_flag']).drop('loan_status', axis=1)\n",
     "\n",
     "# Create our target\n",
-    "y = # YOUR CODE HERE"
+    "y = df['loan_status']\n",
+    "X.head()"
    ]
   },
   {
@@ -698,7 +702,18 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "# YOUR CODE HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check balances\n",
+    "print(Counter(y_train))\n",
+    "print(Counter(y_test)"
    ]
   },
   {
@@ -1044,7 +1059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
