--- a/credit_risk_ensemble.ipynb
+++ b/credit_risk_ensemble.ipynb
@@ -758,7 +758,12 @@
    ],
    "source": [
     "# Resample the training data with the BalancedRandomForestClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import BalancedRandomForestClassifier\n",
+    "# Instantiate\n",
+    "brfc = BalancedRandomForestClassifier(n_estimators=100, random_state=1)\n",
+    "\n",
+    "# Fit\n",
+    "brfc.fit(X_train, y_train)"
    ]
   },
   {
@@ -779,7 +784,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = brfc.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -801,7 +807,13 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
    ]
   },
   {
@@ -825,7 +837,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))\n"
    ]
   },
   {
@@ -937,7 +949,9 @@
    ],
    "source": [
     "# List the features sorted in descending order by feature importance\n",
-    "# YOUR CODE HERE"
+    "features_rank = sorted(zip(brfc.feature_importances_, X.columns), reverse=True)\n",
+    "for feature in features_rank:\n",
+    "    print(f\"{feature[1]}: ({feature[0]})\")"
    ]
   },
   {
@@ -965,7 +979,12 @@
    ],
    "source": [
     "# Train the EasyEnsembleClassifier\n",
-    "# YOUR CODE HERE"
+    "from imblearn.ensemble import EasyEnsembleClassifier\n",
+    "# Instantiate\n",
+    "eec = EasyEnsembleClassifier(n_estimators=100, random_state=1)\n",
+    "\n",
+    "# Fit\n",
+    "eec.fit(X_train, y_train)"
    ]
   },
   {
@@ -986,7 +1005,8 @@
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
+    "y_pred = eec.predict(X_test)\n",
+    "balanced_accuracy_score(y_test, y_pred)"
    ]
   },
   {
@@ -1008,7 +1028,13 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
+    "# Calculating the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# Create a DataFrame from the confusion matrix.\n",
+    "cm_df = pd.DataFrame(\n",
+    "    cm, index=[\"Actual high_risk\", \"Actual low_risk\"], columns=[\"Predicted high_risk\", \"Predicted low_risk\"])\n",
+    "cm_df"
    ]
   },
   {
@@ -1032,7 +1058,7 @@
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "print(classification_report_imbalanced(y_test, y_pred))\n"
    ]
   },
   {
